create nav bar and hero-area

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>NuFruit - Healteh Care Service</title>
 </head>
 <body>
-    
+    <!-- This is nav var section-->
+     <nav>
+        <h3>uFruit</h3>
+        <div>
+            <img src="images/menu.png" alt="">
+            Our App
+        </div>
+    </nav>
+
+    <!-- banner section-->
+    <img src="images/image1.png" alt="">
+
+    <section>
+        <h1>Life<br>
+            Changing <br>
+            Weight Loss
+        </h1>
+        <div>
+            tracking made easy <img src="images/banana.png" alt="">
+        </div>
+        <button>Start Now</button>
+    </section>
 </body>
 </html>
