--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!-- This is nav var section-->
-     <nav>
-        <h3>uFruit</h3>
+     <nav class="navbar">
+        <h3>NuFruit</h3>
         <div>
             <img src="images/menu.png" alt="">
             Our App
@@ -17,17 +17,129 @@
     </nav>
 
     <!-- banner section-->
-    <img src="images/image1.png" alt="">
+    <img class="banana-img" src="images/image1.png" alt="">
 
-    <section>
+    <section class="banner-section">
         <h1>Life<br>
             Changing <br>
             Weight Loss
         </h1>
         <div>
-            tracking made easy <img src="images/banana.png" alt="">
+            tracking made easy <img src="images/banicon.png" alt="">
         </div>
         <button>Start Now</button>
+    </section>
+
+    <!-- This is target section -->
+
+    <section class="target-section container between">
+        <img src="images/target.png" alt="">
+        <div class="deatails-section">
+            <h2>set Your own target</h2>
+            <p class="deatals">Our Well balanced goal is the we recommred for most people Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sequi id at vero, porro rem delectus illo cupiditate voluptatem explica
+            </p>
+            <div class="store-design">
+                <img src="images/black-apple.png" alt="">
+                <div>
+                    <p>Get on the</p>
+                    <h3>App store</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- track section  -->
+     <section class="track-section">
+        <img class="bg-track" src="images/bg 3.png" alt="">
+        <section class="container between">
+            <div class="left-section">
+                <h2>
+                    Track <br>
+                    anywhere, <br>
+                    anytime.
+                </h2>
+
+                <div class="image-grid">
+                    <div>
+                        <img src="images/banana.png" alt="">
+                        <img src="images/taco.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/banana-bread.png" alt="">
+                        <img src="images/flavour-mild.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="right-section">
+                <h3>Over 250000 foods with photos. plus barcode scanning app</h3>
+
+                <div class="details-div">
+                    <img src="images/percent.png" alt="">
+                    <div>
+                        <h2>our well Balanced</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit labore incidunt laborum? Dolores autem est fugiat quod impedit eveniet consequuntur, eaque reiciendis magni dicta deleniti ex quisquam optio expedita. Deleniti?</p>
+                    </div>
+                </div>
+                <div class="details-div">
+                    <img src="images/camera.png" alt="">
+                    <div>
+                        <h2>Barcode Scanner</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit labore incidunt laborum? Dolores autem est fugiat quod impedit eveniet consequuntur, eaque reiciendis magni dicta deleniti ex quisquam optio expedita. Deleniti?</p>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+     </section>
+
+     <!-- calories section -->
+
+     <section class="target-section container between">
+        <div class="deatails-section">
+            <h2>Calories tracking</h2>
+            <p class="deatals">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sapiente repudiandae, adipisci corporis dolore eveniet, minima repellendus, recusandae consectetur odio beatae. Facilis, quasi. Reprehenderit ratione, sapiente recusandae tempora porro deserunt!
+            </p>
+            <div class="store-design">
+                <img src="images/black-apple.png" alt="">
+                <div>
+                    <p>Get on the</p>
+                    <h3>App store</h3>
+                </div>
+            </div>
+        </div>
+        <img src="images/calories.png" alt="">
+    </section>
+
+
+    <section class="company">
+        <img src="images/companies.png" alt="">
+    </section>
+
+
+    <!-- join section -->
+
+    <section class="join"> 
+        <div class="details">
+            <h2>Join free <br>
+                for 7 days </h2>
+                <div class="store-design">
+                    <img src="images/white-apple.png" alt="">
+                
+                    <div>
+                        <p>get on the</p>
+                        <h3>App Store</h3>
+                    </div>
+                </div> 
+        </div>
+        <img src="images/free-section.png" alt="">
+    </section>
+
+    <!-- copy right section -->
+
+    <section class="copyright">
+        @copyright reseverd hablu pragrammer 2024
     </section>
 </body>
 </html>
