--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                     </div>
                 </div> 
         </div>
-        <img src="images/free-section.png" alt="">
+
+        <img class="to" src="images/free-section.png" alt="">
+
     </section>
 
     <!-- copy right section -->
